# cerberus_simulation

./: .clang-format  .format-all.sh  README.md
flya_control/: CMakeLists.txt  package.xml
flya_control/include/flya_control/: quaternion_controller.h  waypoint_controller.h  waypoint_controller_node.h
flya_control/resource/: waypoint_controller_parameters.yaml
flya_control/src/nodes/: quaternion_controller_node.cpp  quaternion_controller_node.h  waypoint_controller_node.cpp
flya_description/: CMakeLists.txt  package.xml
flya_description/config/: joints.yaml
flya_description/urdf/: elios.xacro  elios_base.xacro  flya.gazebo  mav_generic_odometry_sensor.gazebo  multirotor_base_collision.xacro
flya_gazebo/: CMakeLists.txt  package.xml
flya_gazebo/launch/: elios_simulate.launch
flya_gazebo/resource/: elios.yaml  quaternion_controller_elios.yaml
flya_gazebo/rviz/: config.rviz
flya_joy_interface/: CMakeLists.txt  package.xml
flya_joy_interface/include/rotors_joy_interface/: joy.h
flya_joy_interface/src/: joy.cpp
