<?xml version="1.0"?>
<package format="2">
  <name>flya_gazebo</name>
  <version>0.1.1</version>
  <description>The flya_gazebo package</description>

  <maintainer email="yk@todo.todo">yk</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
</package>
